Corrected layout shift

--- a/components/styles/global.css
+++ b/components/styles/global.css
@@ -174,6 +174,17 @@ p {
   display: inline-block;
 }
 
+.divider-placeholder--div {
+  height: 62px;
+  width: 100%;
+  margin: 32px auto;
+}
+
+.curved-line-placeholder--div {
+  height: 150px;
+  width: 20px;
+}
+
 .language-logo-badge--img {
   user-select: none;
   margin: 0 4px;
